# particulo-rs

./: Cargo.toml
examples/: basic.rs
src/: lib.rs  particle.rs
src/engine/: init_context.rs  init_window.rs  mod.rs  shader.wgsl  sim_loop.rs
