[package]
name = "particulo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.9.3"
nalgebra = "0.30.1"
palette = "0.6.0"
rand = "0.8.5"

winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }

anyhow = "1.0.57"

pollster = "0.2.5"
bytemuck = { version = "1.7.2", features = ["derive"] }
